--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 // Apply the java plugin to add support for Java
-apply plugin: 'java'
+apply plugin: 'groovy'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
